# flask-api

./: .gitignore  pyproject.toml
flask_api/: app.py  fake_bd.py
flask_api/services/: create_user_service.py  list_users_service.py
tests/: test_user.py
