[tool.poetry]
name = "flask-api"
version = "0.1.0"
description = ""
authors = ["PedroRibeiro <pedroribeiro89@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_api"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
